[gd_scene load_steps=2 format=2]

[ext_resource path="res://items/item_mesh_in_inventory.gd" type="Script" id=2]

[node name="item_mesh_in_inventory" type="Spatial"]
script = ExtResource( 2 )

[node name="Spatial" type="Spatial" parent="."]

[node name="mesh" type="MeshInstance" parent="Spatial"]

[node name="Area" type="Area" parent="Spatial/mesh"]

[node name="CollisionShape" type="CollisionShape" parent="Spatial/mesh/Area"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0106401, 2.57608 )
current = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.770035, 0, -0.638002, 0.49033, 0.639801, 0.591803, 0.408195, -0.76854, 0.492669, -1.59972, 1.90036, 1.99966 )

[connection signal="input_event" from="Spatial/mesh/Area" to="." method="Area_input_event"]
[connection signal="mouse_entered" from="Spatial/mesh/Area" to="." method="Area_mouse_entered"]
[connection signal="mouse_exited" from="Spatial/mesh/Area" to="." method="Area_mouse_exited"]
